
	* Fix for do_item_cachedump() which was returning
	  an incorrect timestamp.
	
	* Switch to unsigned 64-bit increment/decrement counters
	  from Evan Miller and Dustin Sallings.

	* Add append command support written by Filipe Laborde.
	  Tests/protocol doc updates by Paul Lindner.

	* The memcached-tool script can now display stats.  Patch
	  provided by Dan Christian <dchristian@google.com>

2007-08-21 Paul Lindner <lindner@inuus.com>
	* Incorporate incrememnt patch from Evan Miller 
	  <emiller@imvu.com> to define increment overflow
	  behavior.

2007-08-07 Leon Brocard <acme@astray.com>
	* Bring the memcached.1 manpage up to date

2007-08-06 Paul Lindner <lindner@inuus.com>
	* Fix crash when using -P and -d flags on x86_64
	  with latest libevent release.

2007-07-08  Steven Grimm  <sgrimm@facebook.com>

	* Item stats commands weren't thread-safe; wrap them with locks
	  when compiled in multithreaded mode.
	* The "stats items" command now works again; it broke with the
	  introduction of the powers-of-N chunk size change.

2007-07-06 [Version 1.2.3 released]

2007-06-19  Paul Lindner  <lindner@mirth.inuus.com>

	* Solaris portability fixes from Trond Norbye

2007-05-29  Paul Lindner  <lindner@mirth.inuus.com>

	* Properly document evictions statistic value

2007-05-10  Paul Lindner  <lindner@inuus.com>

	* Flesh out tests for unix domain sockets and binary data.
	* Update rpm spec file to run tests

2007-05-07  Paul Lindner  <lindner@inuus.com>

	* Fix compilation bug on freebsd 6.x (and maybe others)
	* Update RPM spec file per redhat bugzilla #238994
	* Move unistd.h to memcached.h to get rid of warnings
	* Add string.h to thread.c to get correctly prototyped strerror()

2007-05-04  Paul Lindner  <lindner@inuus.com>

	* Add fedora/redhat style init script and RPM spec file

2007-05-12 [Version 1.2.2 released]

2007-04-16  Steven Grimm  <sgrimm@facebook.com>

	* Command tokenizer performance and cleanliness improvement.